[Modal] remove mithril (#42)

--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "firebase": "^4.1.5",
     "gulp-inject": "^4.2.0",
     "gulp-rev": "^8.0.0",
-    "gulp-serve": "^1.4.0",
-    "mithril": "^1.1.3"
+    "gulp-serve": "^1.4.0"
   }
 }
